fixed flex wrap in category & user

--- a/styles/category.css
+++ b/styles/category.css
@@ -160,6 +160,7 @@ body {
 #container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 header {
