--- a/styles/user.css
+++ b/styles/user.css
@@ -156,6 +156,7 @@ body {
 #container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 header {
